--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=980">
     <title>Vetr</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -11,12 +11,18 @@
         body {
             background-image: url('images/Background.png');
             background-repeat: no-repeat;
+            background-color: black;
             background-size: cover;
+            
         }
 
-        @media (max-width: 1200px) {
+        @media (max-width: 1260px) {
             body {
                 background-image: url('images/Background.png');
+                width: 100%;
+                height: 100%;
+                background-position: top;
+                background-color: black;
                 background-repeat: no-repeat;
                 background-size: auto;
             }
