--- a/lyric.html
+++ b/lyric.html
@@ -12,19 +12,38 @@
             background-color: black;
         }
 
+        h3 {
+            font-size: 28px;
+            padding-top: 165px;
+        }
+
         @media (min-width: 993px) and (max-width: 1196px) {
             h3 {
-                font-size: 18px;
+                font-size: 12px;
+                padding-top: 115px;
             }
 
             p {
-                font-size: 10px;
+                font-size: 11px;
+            }
+        }
+        @media (min-width: 190px) and (max-width: 400px) {
+            h3 {
+                font-size: 16px;
+                padding-top: 90px;
+            }
+
+            p {
+                font-size: 12px;
+            }
+            a {
+                font-size: 12px;
             }
         }
 
         .card-transparent:hover .card-img-overlay {
             opacity: 1 !important;
-            transition: .4s ease;
+            transition: .5s ease;
             margin-left: 15px;
             margin-right: 15px;
         }
@@ -32,15 +51,16 @@
         .card-img-overlay {
             opacity: 0;
             background-color: rgba(55, 125, 201, 0.8);
-            transition: .4s ease;
+            transition: .5s ease;
         }
+
         a {
-            color: black;
+            color: white;
         }
+
         a:hover {
             text-decoration: none;
-            color: rgb(31, 31, 31);
-
+            color: white;
         }
     </style>
 </head>
@@ -87,21 +107,48 @@
 
             <div class="row pt-2 text-center">
                 <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
+                    <img class="card-img" src="images/Cover_Lyric5.png" alt="Card image">
+                    <div class="card-img-overlay ">
+                        <h3 class="card-title">Morning</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 2px solid;">
+                        <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
+                        <a class="pr-4" href="pdf/5-Morning-Lyric-English.pdf" target="_blank">Eng
+                        </a>
+                        <a class="pr-4" href="pdf/5-Morning-Lyric-Arabic.pdf" target="_blank">العربیه
+                        </a>
+                        <a href="pdf/5-Morning-Lyric-Farsi.pdf" target="_blank">Farsi
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
+                    <img class="card-img" src="images/Cover_Lyric4.png" alt="Card image">
+                    <div class="card-img-overlay ">
+                        <h3 class="card-title">When I Hear Your Name</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 2px solid;">
+                        <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
+                        <a class="pr-4" href="pdf/4-Wihyn-Lyric-English.pdf" target="_blank">Eng
+                        </a>
+                        <a class="pr-4" href="pdf/4-Wihyn-Lyric-Arabic.pdf" target="_blank">العربیه
+                        </a>
+                        <a href="pdf/4-Wihyn-Lyric-Farsi.pdf" target="_blank">Farsi
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
                     <img class="card-img" src="images/Cover_Lyric1.png" alt="Card image">
                     <div class="card-img-overlay">
-                        <h3 class="card-title pb-5 mt-5 pt-5">Drink Some Water</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
-                        <p class="pt-5">Choose a language</p>
-                        <p>to see lyric of the music:</p>
-                        <a class="pr-5"
-                            href="https://b89cbabe-84e0-41bc-8fef-2dd49a58f9a6.filesusr.com/ugd/405384_332c5bcb0cd64e7eb4c1f0796c668b58.pdf"
+                        <h3 class="card-title">Drink Some Water</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 2px solid;">
+                        <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
+                        <a class="pr-4"
+                            href="pdf/3-Dsw-Lyric-English.pdf"
                             target="_blank">Eng
                         </a>
-                        <a class="pr-5"
-                            href="https://b89cbabe-84e0-41bc-8fef-2dd49a58f9a6.filesusr.com/ugd/405384_a6842a654c474d45ba4bdcd880c9ebed.pdf"
+                        <a class="pr-4"
+                            href="pdf/3-Dsw-Lyric-Arabic.pdf"
                             target="_blank">العربیه
                         </a>
-                        <a href="https://b89cbabe-84e0-41bc-8fef-2dd49a58f9a6.filesusr.com/ugd/405384_1e316dfdfe0e4327af8e2a160781b25e.pdf"
+                        <a href="pdf/3-Dsw-Lyric-Farsi.pdf"
                             target="_blank">Farsi
                         </a>
                     </div>
@@ -109,45 +156,28 @@
                 <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
                     <img class="card-img" src="images/Cover_Lyric2.png" alt="Card image">
                     <div class="card-img-overlay ">
-                        <h3 class="card-title pb-5 mt-5 pt-5">My Three-Year-Old Hero</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
-                        <p class="pt-5">Choose a language</p>
-                        <p>to see lyric of the music:</p>
-                        <a class="pr-5" href="  " target="_blank">Eng
+                        <h3 class="card-title">My Three-Year-Old Hero</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 2px solid;">
+                        <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
+                        <a class="pr-4" href="pdf/2-Mtyoh-Lyric-English.pdf" target="_blank">Eng
                         </a>
-                        <a class="pr-5" href="" target="_blank">العربیه
+                        <a class="pr-4" href="pdf/2-Mtyoh-Lyric-Arabic.pdf" target="_blank">العربیه
                         </a>
-                        <a href="" target="_blank">Farsi
+                        <a href="pdf/2-Mtyoh-Lyric-Farsi.pdf" target="_blank">Farsi
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
                     <img class="card-img" src="images/Cover_Lyric3.png" alt="Card image">
                     <div class="card-img-overlay ">
-                        <h3 class="card-title pb-5 mt-5 pt-5">After You</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
-                        <p class="pt-5">Choose a language</p>
-                        <p>to see lyric of the music:</p>
-                        <a class="pr-5" href="" target="_blank">Eng
+                        <h3 class="card-title">After You</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 2px solid;">
+                        <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
+                        <a class="pr-4" href="pdf/1-AfterYou-Lyric-English.pdf" target="_blank">Eng
                         </a>
-                        <a class="pr-5" href="" target="_blank">العربیه
+                        <a class="pr-4" href="pdf/1-AfterYou-Lyric-Arabic.pdf" target="_blank">العربیه
                         </a>
-                        <a href="" target="_blank">Farsi
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
-                    <img class="card-img" src="images/Cover_Lyric4.png" alt="Card image">
-                    <div class="card-img-overlay ">
-                        <h3 class="card-title pb-5 mt-5 pt-5">When I Hear Your Name</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
-                        <p class="pt-5">Choose a language</p>
-                        <p>to see lyric of the music:</p>
-                        <a class="pr-5" href="  " target="_blank">Eng
-                        </a>
-                        <a class="pr-5" href="" target="_blank">العربیه
-                        </a>
-                        <a href="" target="_blank">Farsi
+                        <a href="pdf/1-AfterYou-Lyric-Farsi.pdf" target="_blank">Farsi
                         </a>
                     </div>
                 </div>
