--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <title>Vetr</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -33,7 +33,8 @@
         #play-music1,
         #play-music2,
         #play-music3,
-        #play-music4 {
+        #play-music4,
+        #play-music5 {
             height: 22px;
             margin-left: 340px;
             margin-right: 0px;
@@ -44,7 +45,8 @@
         #pause-music1,
         #pause-music2,
         #pause-music3,
-        #pause-music4 {
+        #pause-music4,
+        #pause-music5 {
             height: 23px;
             margin-left: 340px;
             margin-right: -3px;
@@ -57,7 +59,8 @@
         #pause-music1,
         #pause-music2,
         #pause-music3,
-        #pause-music4 {
+        #pause-music4,
+        #pause-music5 {
             display: none;
         }
 
@@ -81,16 +84,8 @@
             background-color: rgba(55, 125, 201, 0.7);
             margin-left: 60px;
             margin-right: 5px;
-            margin-top: -10px;
-            opacity: 0;
-            transition: .3s ease;
-        }
-        #cover:hover + #cover-text, #cover-text:hover {
-            opacity: 1;
-            transition: .3s ease;
             margin-top: -20px;
         }
-
         #streamicon {
             height: 17px;
             margin: 7px;
@@ -114,14 +109,15 @@
             margin: 14px;
             margin-left: 370px;
             width: 270px;
-            background-color: rgb(153, 153, 153);
+            background-color: rgb(190, 190, 190);
             border-radius: 8px;
         }
 
         #myprogressBarmusic1,
         #myprogressBarmusic2,
         #myprogressBarmusic3,
-        #myprogressBarmusic4 {
+        #myprogressBarmusic4,
+        #myprogressBarmusic5 {
             width: 0;
             height: 5px;
             background-color: #ffffff;
@@ -130,7 +126,7 @@
 
         .cover {
             float: right;
-            margin-top: -420px;
+            margin-top: -440px;
             margin-right: -70px;
             opacity: 0.8;
             transition: .3s ease;
@@ -143,6 +139,7 @@
 
         @media (max-width: 992px) {
             .cover {
+                position: absolute;
                 float: right;
                 margin-top: -410px;
                 margin-right: -200px;
@@ -154,7 +151,7 @@
     </style>
 </head>
 
-<body>
+<body style="position: relative;">
     <div class="container">
         <div class="header text-center pt-4">
             <img src="images/vetr_logo.png" width="120px" class="" alt="">
@@ -203,8 +200,46 @@
 
                                 </style>
                                 <ul class="info p-1" style="list-style: none;list-style-type: none;">
-                                    <li>#</li>
-                                    <li style="margin-left:645px">Duration</li>
+                                    <li style="margin-left:655px">Duration</li>
+                                    <li style="margin-left:40px">Stream</li>
+                                    <li style="margin-left:30px">Buy</li>
+                                    <li style="margin-left:15px">Download</li>
+                                </ul>
+                            </div>
+                            <audio id="music5">
+                                <source src="" />
+                            </audio>
+                            <div id="Progress_Status">
+                                <div id="myprogressBarmusic5"></div>
+                            </div>
+                            <span id="current-music5"
+                                style="position: absolute;margin-left: 657px;margin-top: 5px;color: blanchedalmond;"></span>
+                            <span id="duration-music5"
+                                style="position: absolute;margin-left: 695px;margin-top: 5px;color: blanchedalmond;"></span>
+
+                            <p style="position: absolute;color: azure; padding: 5px;">05</p>
+                            <div>
+                                <img src="images/Cover_Lyric5.png" id="cover"  alt="">
+                                <span style="position: absolute;" id="cover-text">Morning</span>
+                            </div>
+                            <input type="image" src="images/play.png" onclick="toggle('music5')" id="play-music4">
+                            <input type="image" src="images/pause.png" onclick="toggle('music5')" id="pause-music4">
+                            <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'mo.html';"
+                                id="streamicon">
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'mo.html';" id="buy">
+                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = 'mo.html';"
+                                id="download">
+                        </div>
+                    </div>
+                    <img src="images/cover5-back.jpg" width="700px" class="cover" alt="">
+                    <div class="">
+                        <div id='player' style="position: relative;">
+                            <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
+                                <style>
+
+                                </style>
+                                <ul class="info p-1" style="list-style: none;list-style-type: none;">
+                                    <li style="margin-left:655px">Duration</li>
                                     <li style="margin-left:40px">Stream</li>
                                     <li style="margin-left:30px">Buy</li>
                                     <li style="margin-left:15px">Download</li>
@@ -230,8 +265,8 @@
                             <input type="image" src="images/pause.png" onclick="toggle('music4')" id="pause-music4">
                             <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'wi.html';"
                                 id="streamicon">
-                            <input type="image" src="images/Buy.png" onclick="window.location.href = '';" id="buy">
-                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = '';"
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'wi.html';" id="buy">
+                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = 'wi.html';"
                                 id="download">
                         </div>
                     </div>
@@ -240,8 +275,7 @@
                         <div id='player' style="position: relative;">
                             <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
                                 <ul class="info p-1" style="list-style: none;list-style-type: none;">
-                                    <li>#</li>
-                                    <li style="margin-left:645px">Duration</li>
+                                    <li style="margin-left:655px">Duration</li>
                                     <li style="margin-left:40px">Stream</li>
                                     <li style="margin-left:30px">Buy</li>
                                     <li style="margin-left:15px">Download</li>
@@ -266,8 +300,8 @@
                             <input type="image" src="images/pause.png" onclick="toggle('music1')" id="pause-music1">
                             <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'dsw.html';"
                                 id="streamicon">
-                            <input type="image" src="images/Buy.png" onclick="window.location.href = '';" id="buy">
-                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = '';"
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'dsw.html';" id="buy">
+                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = 'dsw.html';"
                                 id="download">
                         </div>
                     </div>
@@ -276,8 +310,7 @@
                         <div id='player' style="position: relative;">
                             <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
                                 <ul class="info p-1" style="list-style: none;list-style-type: none;">
-                                    <li>#</li>
-                                    <li style="margin-left:645px">Duration</li>
+                                    <li style="margin-left:655px">Duration</li>
                                     <li style="margin-left:40px">Stream</li>
                                     <li style="margin-left:30px">Buy</li>
                                     <li style="margin-left:15px">Download</li>
@@ -303,8 +336,8 @@
                             <input type="image" src="images/pause.png" onclick="toggle('music2')" id="pause-music2">
                             <input type="image" src="images/Streamicon.png"
                                 onclick="window.location.href = 'tyoh.html';" id="streamicon">
-                            <input type="image" src="images/Buy.png" onclick="window.location.href = '';" id="buy">
-                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = '';"
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'tyoh.html';" id="buy">
+                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = 'tyoh.html';"
                                 href="music.html" id="download">
                         </div>
                     </div>
@@ -313,8 +346,7 @@
                         <div id='player' style="position: relative;">
                             <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
                                 <ul class="info p-1" style="list-style: none;list-style-type: none;">
-                                    <li>#</li>
-                                    <li style="margin-left:645px">Duration</li>
+                                    <li style="margin-left:655px">Duration</li>
                                     <li style="margin-left:40px">Stream</li>
                                     <li style="margin-left:30px">Buy</li>
                                     <li style="margin-left:15px">Download</li>
@@ -340,8 +372,8 @@
                             <input type="image" src="images/pause.png" onclick="toggle('music3')" id="pause-music3">
                             <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'ay.html';"
                                 id="streamicon">
-                            <input type="image" src="images/Buy.png" onclick="window.location.href = '';" id="buy">
-                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = '';"
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'ay.html';" id="buy">
+                            <input type="image" src="images/Downloadicon.png" onclick="window.location.href = 'ay.html';"
                                 id="download">
                         </div>
                     </div>
